# pixelization

./: .gitignore  CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  annotated.html  classImageView-members.html  classImageView.html  classImageViewBase-members.html  classImageViewBase.html  classStbImage-members.html  classStbImage.html  classes.html  dir_000001_000003.html  dir_000004_000003.html  dir_000005_000003.html  dir_000005_000004.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_0fbe2dd2394aaa3e721d927528c6ae20.html  dir_0fbe2dd2394aaa3e721d927528c6ae20_dep.dot  dir_315de7d53d8b599e2ca8eecda9414656.html  dir_3273014abc7d13d3a75f57360a4dde4e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_8ea15340a3be7ab0fe7b8b045131c1d1.html  dir_8ea15340a3be7ab0fe7b8b045131c1d1_dep.dot  dir_c17dc64c98cba5e3a5d53b0eb213fc8d.html  dir_d442f925011ac72c0e415488f90dfd0b.html  dir_dd787a8e709a15fec1b2e53e13b2540a.html  dir_dd787a8e709a15fec1b2e53e13b2540a_dep.dot  dir_edb6b4c7d5ba6b0ba1bcc84a8b02d522.html  dir_edb6b4c7d5ba6b0ba1bcc84a8b02d522_dep.dot  dir_f12cb7bcd55f2923eea91997bffb67f4.html  dir_f12cb7bcd55f2923eea91997bffb67f4_dep.dot  empty_8cpp.html  files.html  functions.html  functions_func.html  functions_type.html  globals.html  (+36 more)
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: build-target-main.yaml  build-target-unit-test.yaml  code-cov.yml  codeql.yml  documentation.yml  macos.yml  pre-commit.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cc
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js
src/: CMakeLists.txt
src/lib_resize/: CMakeLists.txt
src/lib_resize/lib_resize/: resize.hpp
src/lib_resize/src/: resize.cpp
src/lib_stb/: CMakeLists.txt
src/lib_stb/lib_stb/: stb_image.hpp  stb_image_write.hpp
src/lib_stb/src/: stb_image.cpp  stb_image_write.cpp
src/lib_utils/: CMakeLists.txt
src/lib_utils/lib_utils/: image_view.hpp
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
tests/: CMakeLists.txt  image_view_test.cc  main.cc  resize_test.cc  stb_image_test.cc  stb_image_write_test.cc  test_enviroment_test.cc
tests/resize_tests/: bi_cubic_test.cc  bi_linear_test.cc  image.hpp  nearest_neighbor_test.cc
tests/test_utils/: test_environment.hpp
